Try fix input on iOs

--- a/src/styles/helpers/_mixins.scss
+++ b/src/styles/helpers/_mixins.scss
@@ -78,13 +78,12 @@
     &:focus, &:active {
         outline: none;
     }
-
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    -webkit-touch-callout: initial;
+    -webkit-user-select: initial;
+    -khtml-user-select: initial;
+    -moz-user-select: initial;
+    -ms-user-select: initial;
+    user-select: initial;
     -webkit-tap-highlight-color: transparent;
 }
 @mixin transition($property, $duration, $timing-function, $delay) {
